tests/ui/fn/implied-bounds-unnorm-associated-type-2.stderr
error: lifetime may not live long enough
  --> $DIR/implied-bounds-unnorm-associated-type-2.rs:19:5
   |
LL | fn g<'a, 'b>() {
   |      --  -- lifetime `'b` defined here
   |      |
   |      lifetime `'a` defined here
LL |     f::<'a, 'b>(());
   |     ^^^^^^^^^^^^^^^ generic argument requires that `'b` must outlive `'a`
   |
   = help: consider adding the following bound: `'b: 'a`
   = note: requirement occurs because of a function pointer to `f`
   = note: the function `f` is invariant over the parameter `'a`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: aborting due to 1 previous error

